Changed the look of the homepage and fixed the spacing for the iPhone App page. Added some styles for the CSS in page-intro for the homepage.

--- a/mpdb-common/src/edu/rpi/metpetdb/public/style/elements.css
+++ b/mpdb-common/src/edu/rpi/metpetdb/public/style/elements.css
@@ -16,7 +16,7 @@ h3, .h3 {
 	font-weight: normal;
 	font-family: Helvetica, Arial, sans-serif;
 }
-p {
+p, .p {
 	margin: 1em 0;
 	line-height: 1.5;
 }
